Linkding/deployment.yaml
apiVersion: v1 
kind: Namespace 
metadata: 
  name:  linkding 
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: linkding 
  namespace: linkding 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: linkding 
  template: 
    metadata: 
      labels: 
        app: linkding 
    spec: 
      containers: 
        - name: linkding 
          image: sissbruecker/linkding:1.42.0 
          ports: 
            - containerPort: 9090
